# cpp-trabalho-05-projeto-bares-duplas-joao-thiago

./: author.md
EBNF_basic/source/: CMakeLists.txt
EBNF_basic/source/core/: main.cpp  parser.cpp  parser.h
EBNF_basic/source/include/: bares_manager.h  parser.h  token.h  vector.h
EBNF_basic/source/lib/: stack.h
EBNF_basic/source/src/: baresManager.cpp  bares_manager.cpp  main.cpp  parser.cpp  vector.cpp
data/: output_test.txt
source/: baresManager.h
